# rotomind

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  FRONTEND_DESIGN.md  MOCKUPS.md  README.md  analyzer.py  app.py  dashboard.py  db.py  importer.py  locking.py  models.py  nba_client.py  pyproject.toml  recommender.py  requirements.txt  roto.py  stats.py  supervisor.py  test_espn_hybrid.db  test_integration.py
fantasy_nba_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.local.example  README.md  next.config.js  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  providers.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/app/(dashboard)/players/: page.tsx
frontend/app/(dashboard)/trade-analyzer/: page.tsx
frontend/components/charts/: category-bar.tsx  trend-sparkline.tsx  z-score-radar.tsx
frontend/components/layout/: command-palette.tsx  header.tsx  sidebar.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  tooltip.tsx
frontend/design/: FIGMA_SPECS.md  figma-prototype.html  quick-preview.html
frontend/lib/api/: client.ts  leagues.ts  players.ts  trades.ts
frontend/lib/hooks/: use-leagues.ts  use-players.ts  use-trade-analysis.ts
frontend/lib/stores/: trade-store.ts  ui-store.ts
frontend/lib/types/: index.ts
frontend/lib/utils/: format.ts
src/api/: app.py
src/core/: config.py  db.py  importer.py  models.py  roto.py  supervisor.py
src/ingestion/: espn_client.py  hybrid_client.py  nba_client.py
src/ui/: dashboard.py
tests/: test_integration.py
(+5 files in other folders)
